# mobile-robotics-376

./: README.md
msc/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
msc/src/: msc.cpp
pas/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
pas/action/: move.action
pas/launch/: start.launch  start.launch~
pas/src/: ac.cpp  as.cpp
ps7/: Writeup.txt  my_steering_algorithm.h
ps8/: PS8_Report  a.launch
ps8/source_file_copies/: pub_des_state_main.cpp  steering_algorithm.h
ps9/: PS9_Report.txt  object_finder_as.cpp
rc/: CMakeLists.txt~  README.md  README.md~  package.xml~
rc/src/: lidar_alarm2.cpp
vp6/my_mobot_pub_des_state/: CMakeLists.txt  README.md  package.xml
vp6/my_mobot_pub_des_state/launch/: a.launch
vp6/my_mobot_pub_des_state/src/: open_loop_controller.cpp  pub_des_state.cpp  pub_des_state.h  pub_des_state_main.cpp  pub_des_state_path_client.cpp  pub_des_state_path_client_3mx3m_sqr.cpp  pub_des_state_startup_main.cpp
vp6/my_mobot_pub_des_state/srv/: path.srv
vp6/my_traj_builder/: CMakeLists.txt  README.md  package.xml
vp6/my_traj_builder/include/my_traj_builder/: my_traj_builder.h
vp6/my_traj_builder/src/: traj_builder.cpp  traj_builder_example_main.cpp
wps/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
wps/launch/: go.launch  go.launch~
wps/src/: example_ros_client.cpp  example_ros_service.cpp  mpc.cpp  mps2.cpp  path_service.cpp
wps/srv/: ExampleServiceMsg.srv  PathSrv.srv
